welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:5: error: ':' expected but ')' found.
	def faireV(c) {
                    ^MethodsPicture:88: error: identifier expected but '}' found.
}
^